syntax = "proto3";

package inferenceServiceServer;

service InferenceService{
  rpc GetChatResponse(Conversation) returns (stream TutorResponse){}
}

message Conversation{
  repeated ConvTurn turns = 1;
}

message ConvTurn{
  string sender = 1;
  string message = 2;
}

message TutorResponse{
  string responsePart = 1;
}